--- a/main/requirements.txt
+++ b/main/requirements.txt
@@ -1,3 +1,11 @@
+# Core Flask framework
 Flask>=2.0
-python-dotenv>=1.0.0  # For loading environment variables (optional but recommended)
-Flask-Session
+
+# Session support for Flask
+Flask-Session>=0.4.0
+
+# Load environment variables from .env files
+python-dotenv>=1.0.0
+
+# Google Generative AI SDK for Gemini API
+google-generativeai>=0.3.2
